--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
    <div class="column">
      <!-- column large -->
-     <div class="clarge">
+     <div class="large">
      </div>
 
      <!-- column medium -->
